--- a/src/styling/styles/components.scss
+++ b/src/styling/styles/components.scss
@@ -356,6 +356,43 @@
   }
 }
 
+.edit-task-Modal {
+  background: $modal-fog;
+  .edit-task-Modal-Dialog {
+    box-shadow: 3px 3px 15px $success-color;
+    .edit-task-Modal-Content {
+      padding: 10px;
+      width: 40vw;
+      min-width: 300px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .edit-task-content {
+        gap: 10px;
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+        width: 100%;
+        .edit-task-content-title {
+          width: 100%;
+          text-align: center;
+          font-size: 26px;
+          color: $black;
+          text-transform: uppercase;
+        }
+        .setting-content-list {
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+          flex-grow: 1;
+          width: 100%;
+          padding: 0px 10px;
+        }
+      }
+    }
+  }
+}
+
 .Modal-filter {
   background: $modal-fog;
   .Modal-filter-Dialog {
